--- a/motech-mobile-webapp/src/main/webapp/index.html
+++ b/motech-mobile-webapp/src/main/webapp/index.html
@@ -1,7 +1,8 @@
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-   "http://www.w3.org/TR/html4/loose.dtd">
-
+<!--
+To change this template, choose Tools | Templates
+and open the template in the editor.
+-->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -11,7 +12,9 @@
         <h1>IMP Test Page</h1>
         <form method="GET" action="incomingmessage">
             Sender Number: <input type="text" name="from" id="from" />
+            <br />
             Message:
+            <br />
             <textarea cols="40" rows="10" name="text" id="text"></textarea>
             <input type="submit" value="send" />
         </form>
